--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<p><a href="sd/index.html">SD-card specification</a></p>
+	<p><a href="microchip/MPLAB_XC16_C_Compiler_Users_Guide.pdf">MPLAB_XC16_C_Compiler_Users_Guide.pdf</a></p>
 	</br>
 	<p><a href="datasheets/16-Bit MCU and DSC Programmer's Reference Manual 10-25-17 70000157g.pdf">16-Bit MCU and DSC Programmer's Reference Manual 10-25-17 70000157g.pdf</a></p>
 	<p><a href="datasheets/dsPIC33-PIC24 FRM Data Memory 09-14-21 DS70000595.pdf">dsPIC33-PIC24 FRM Data Memory 09-14-21 DS70000595.pdf</a></p>
